--- a/assets/custom/custom.css
+++ b/assets/custom/custom.css
@@ -2,3 +2,718 @@
 .left {
     margin-left: 0px;
 }
+/*
+
+	-- -- -- -- -- -- --
+	Documentation CSS
+	-- -- -- -- -- -- --
+
+*/
+	#toc.js li {
+		display: none;
+	}
+	#toc.js .option-select,
+	#toc.js .option-select select {
+		display: block;
+	}
+	#toc.js .option-select select {
+		width: 100%;
+	}
+
+	.subject .doc-options {
+		float: right;
+		margin: -2.5em 0 0 0;
+		padding: 0;
+	}
+
+	.ordering-controls {
+		display: inline-block;
+		margin-left: 1em;
+		padding: 0.2em 0.4em;
+		border: 1px solid #ccc;
+		background: #f1f1f1;
+	}
+	.ordering-controls .reorder {
+		display: inline-block;
+		width: 1em;
+		height: 1em;
+		overflow: hidden;
+		line-height: 1;
+	}
+	.ordering-controls a.reorder {
+		color: #999;
+		border: none;
+	}
+	.ordering-controls a.reorder:hover {
+		color: #222;
+		border: none;
+	}
+	.ordering-controls span.reorder {
+		color: #ddd;
+	}
+	.ordering-controls small.order-up-before,
+	.ordering-controls .order-up:before {
+		content: "\2191";
+		font-family: "Fontcons";
+		margin-right: 5em;
+	}
+
+	.ordering-controls small.order-down-before,
+	.ordering-controls .order-down:before {
+		content: "\2193";
+		font-family: "Fontcons";
+		margin-right: 5em;
+	}
+
+	/*.aside li {
+		border: none;
+	}
+	.aside li a:before {
+		content: "\271A";
+		font-family: "Fontcons";
+		height: 1em;
+		width: 1em;
+		text-align: center;
+		font-size: 0.85em;
+		line-height: 1;
+		margin: -0.2em 0 0 0;
+		float: left;
+		cursor: pointer;
+		border: none;
+	}
+	.aside li a {
+		padding: 0.5em 0 0.5em 1em;
+	}*/
+	.aside li.active.parent>a:before {
+		/*content: "\2010";*/
+		border-width: 0.32em;
+		border-color: #222 transparent transparent transparent;
+	}
+	.aside ul ul {
+		display: none;
+	}
+	.aside li.active>ul {
+		display: block;
+	}
+	.aside li.active>a {
+		font-weight: bold;
+		color: #666;
+	}
+	.aside li.active>a.unpublished:before,
+	.aside li.active.parent>a.unpublished:before,
+	.aside a.unpublished:before {
+		width: auto;
+		height: auto;
+		content: "\2298";
+		font-family: "Fontcons";
+		color: #ccc;
+		border: none;
+		border-width: 0;
+		border-color: transparent;
+		top: 1.2em;
+	}
+
+	.subject ul {
+		margin: 1em 0 1em 1.5em;
+	}
+	.subject li,
+	.subject dl {
+		line-height: 1.5em;
+	}
+	.subject ul>li {
+		margin: 0.2em 0;
+		list-style: circle;
+	}
+	.return {
+		border-top: 1px solid #eee;
+		padding: 1em 0 0 0;
+		margin: 1em 0 0 0;
+		text-align: right;
+		display: none;
+	}
+	.subject-header h3 {
+		display: none;
+	}
+	.subject-title {
+		margin-right: 6em;
+	}
+	.subject-footer {
+		border-top: 1px solid #ddd;
+		margin-top: 2em;
+		color: #bbb;
+	}
+	/* Page navigation */
+	.com_documentation ul.page-nav {
+		margin: 1em 0;
+		padding: 0;
+		list-style: none;
+		border: none;
+	}
+	.com_documentation ul.page-nav:before,
+	.com_documentation ul.page-nav:after {
+		content: "";
+		display: table;
+		line-height: 0;
+	}
+	.com_documentation ul.page-nav:after {
+		clear: both;
+	}
+	.com_documentation ul.page-nav li {
+		margin: 0;
+		padding: 0;
+		display: block;
+		float: left;
+		background-image: none;
+	}
+	.com_documentation ul.page-nav li.next {
+		float: right;
+	}
+
+	.highlight {
+		background-color: #FFFF99;
+	}
+
+	article header h2 {
+		margin: 0;
+		padding: 0;
+	}
+	article section {
+		border-top: 1px solid #e9e9e9;
+		padding: 30px 0 30px 0;
+	}
+	article section:first-child {
+		border: none;
+	}
+	article header .controls {
+		position: absolute;
+		top: 1em;
+		right: 60px;
+	}
+	article section h3:first-child {
+		margin-top: 0;
+		padding-top: 0;
+	}
+
+	.return span {
+		color: #ccc;
+		float: left;
+		font-size: 90%;
+	}
+	.return a {
+		border: none;
+	}
+	.return a span {
+		color: #fff;
+		float: none;
+	}
+	.return a:hover span {
+		color: #c00;
+		border-bottom: 1px solid #c00;
+	}
+	.img-wrap {
+		text-align: center;
+	}
+	.img-wrap img {
+		border: 1px solid #eee;
+	}
+	.note,
+	.download,
+	.video { 
+		margin: 1em 0;
+		padding: 1em 1em 1em 2.5em;
+		position: relative;
+		-webkit-border-radius: 0.25em;
+		-moz-border-radius: 0.25em;
+		border-radius: 0.25em;
+	}
+	.note *:first-child,
+	.download *:first-child,
+	.video *:first-child {
+		margin-top: 0;
+		padding-top: 0;
+	}
+	.note:before,
+	.download:before,
+	.video:before {
+		font-family: "Fontcons";
+		display: block;
+		content: "";
+		position: absolute;
+		top: 1em;
+		left: 1em;
+		width: 1em;
+	}
+	.note { 
+		/*background: #FFFDEF;
+		color: #d5660f;*/
+		background: #fff0db;
+		color: #ffa44c;
+	}
+	.note:before {
+		content: "\f02a";
+	}
+	.download { 
+		/*border: 1px solid #CDDECA;*/
+		color: #7AAB69;
+		background: #F3FDF0; 
+	}
+	.download:before {
+		content: "\f019";
+	}
+	.video { 
+		color: #4ea176;
+		border: 1px solid #bbdecc;
+		background: #eaf5f0;
+	}
+	.video:before {
+		content: "\f03d";
+	}
+
+	.com_documentation code {
+		display: inline-block;
+		font-size: 0.85em;
+		font-family: Monaco, Consolas, "Lucida Console", monospace;
+		background-color: #eee;
+		color: #555;
+		padding: 0em 0.6em;
+		margin: 0 0.2em;
+		border: none;
+	}
+	.com_documentation .yes,
+	.com_documentation .no,
+	.com_documentation .neutral {
+		display: block;
+		width: 1.2em;
+		height: 1.2em;
+		overflow: hidden;
+	}
+	.com_documentation .yes:before {
+		content: "\2714";
+		font-family: "Fontcons";
+	}
+	.com_documentation .no:before {
+		content: "\2716";
+		font-family: "Fontcons";
+	}
+	.com_documentation .neutral:before {
+		content: "\2010";
+		font-family: "Fontcons";
+	}
+
+	.subject-form {
+		display: none;
+	}
+	.subject-body {
+		border-top: 1px solid #e9e9e9;
+		margin-top: 30px;
+	}
+
+/* Syntax highlighting */
+	pre,
+	.syntaxhighlighter,
+	.dp-highlighter {
+		margin: 2em 0;
+		font-family: Monaco, Consolas, "Lucida Console", monospace;
+		padding: 2em;
+		padding: 1.61803399em;
+		font-size: 0.85em;
+		border: 0;
+		color: #666;
+		line-height: 1.9em;
+		white-space: pre-wrap;
+		word-wrap: break-word;
+		background: #f9f9f9;
+		/*border: 2px solid #e7e7e7;*/
+		-webkit-border-radius: 0.5em;
+		-moz-border-radius: 0.5em;
+		-ms-border-radius: 0.5em;
+		-o-border-radius: 0.5em;
+		border-radius: 0.5em;
+	}
+	.syntaxhighlighter code {
+		background: transparent;
+		display: inline;
+		margin: 0 auto;
+		padding: 0;
+	}
+
+	.syntaxhighlighter .tag,
+	.dp-highlighter .tag {
+		background: transparent !important;
+		padding: 0 !important;
+		margin: 0 auto !important;
+		display: inline;
+		color: #069 !important;
+	}
+
+	/* clear styles */
+	.syntaxhighlighter ol,
+	.syntaxhighlighter ol li,
+	.syntaxhighlighter ol li span,
+	.dp-highlighter ol,
+	.dp-highlighter ol li,
+	.dp-highlighter ol li span {
+		margin: 0;
+		padding: 0;
+		border: none;
+	}
+	.syntaxhighlighter a,
+	.syntaxhighlighter a:hover,
+	.dp-highlighter a,
+	.dp-highlighter a:hover {
+		background: none;
+		border: none;
+		padding: 0;
+		margin: 0;
+	}
+	.dp-highlighter ol {
+		list-style: decimal;
+		margin: 0px 0px 1px 45px !important;
+		padding: 0px;
+		color: #666;
+	}
+	.dp-highlighter.nogutter ol,
+	.dp-highlighter.nogutter ol li {
+		list-style: none !important;
+		margin-left: 0px !important;
+	}
+	.dp-highlighter ol li,
+	.dp-highlighter .columns div {
+		list-style: decimal-leading-zero;
+		list-style-position: outside !important;
+		padding: 0 3px 0 10px !important;
+		margin: 0 !important;
+	}
+	.dp-highlighter.nogutter ol li,
+	.dp-highlighter.nogutter .columns div {
+		border: 0;
+	}
+
+	/* Language specific styles */
+	.syntaxhighlighter ol,
+	.syntaxhighlighter ol li,
+	.syntaxhighlighter ol li.alt,
+	.syntaxhighlighter ol li span,
+	.syntaxhighlighter ol li.alt span,
+	.dp-highlighter ol,
+	.dp-highlighter ol li,
+	.dp-highlighter ol li.alt,
+	.dp-highlighter ol li span,
+	.dp-highlighter ol li.alt span, {
+		background-color: transparent;
+	}
+	.syntaxhighlighter span,
+	.dp-highlighter span {
+		background-image: none;
+	}
+	.syntaxhighlighter .comment,
+	.syntaxhighlighter .comments,
+	.dp-highlighter .comment, 
+	.dp-highlighter .comments { color: #aaa; background-color: inherit; }
+	.syntaxhighlighter .string,
+	.dp-highlighter .string { color: #bcd42a; background-color: inherit; }
+	.syntaxhighlighter .keyword,
+	.dp-highlighter .keyword { color: #4bb1b1; font-weight: normal; background-color: inherit; }
+	.syntaxhighlighter .preprocessor,
+	.dp-highlighter .preprocessor { color: gray; background-color: inherit; }
+	.syntaxhighlighter .func,
+	.dp-highlighter .func { color: #ef7c61; }
+	.syntaxhighlighter .variable,
+	.dp-highlighter .vars { color: #9b859d; } /*purple: #9b859d; 758789 */
+
+/* btns */
+	.aside .btn-group-wrap {
+		margin: 0 0 2em 0;
+	}
+	.aside .btn-group {
+		display: block;
+	}
+	.aside .btn-group .btn {
+		width: 80%;
+	}
+	.aside .btn-group .btn.dropdown-toggle {
+		width: 20%;
+	}
+	#content-header-extra .btn-group .dropdown-menu,
+	.aside .btn-group .dropdown-menu {
+		right: 0;
+	}
+	.aside .dropdown-menu li {
+		margin: 0;
+		display: block;
+		font-size: 0.85em;
+	}
+	.aside .btn-group .dropdown-menu a {
+		padding: 0.4em 1em;
+	}
+	.safari .btn-group span.dropdown-toggle {
+		height: 2.45em;
+	}
+	#content-header-extra .btn-group .dropdown-menu {
+		width: auto;
+		min-width: 0;
+	}
+	#content-header-extra .btn-group .dropdown-menu li {
+		font-size: 0.85em;
+	}
+
+	.doc-section *:last-child {
+		margin-bottom: 0;
+	}
+
+	.new-page {
+		text-align: center;
+	}
+
+	.subject-meta {
+		margin: 0 0 2em 0;
+	}
+	.subject-meta dl {
+		margin: 0;
+		padding: 0.6em 1em;
+		color: #999;
+		font-size: 0.85em;
+		background-color: #fffbe2;
+		color: #918263;
+		border-radius: 0.25em;
+	}
+	.subject-meta dt {
+		display: inline;
+	}
+	.subject-meta dt:after {
+		content: ": ";
+	}
+	.subject-meta dd {
+		margin: 0 1.5em 0 0;
+		padding: 0;
+		display: inline;
+	}
+	.subject-meta dd a {
+		color: #666;
+		border-bottom: 1px dotted #666;
+	}
+	.subject-meta dd a:hover {
+		color: #111;
+		border-bottom: 1px solid #111;
+	}
+	.subject-meta .state-published {
+		color: green;
+	}
+	.subject-meta .state-unpublished {
+		color: #c00;
+	}
+	.subject-meta .omega {
+		text-align: right;
+	}
+
+	/*.com_documentation .aside li a.add:before {
+		width: auto;
+		height: auto;
+		border: none;
+		position: static;
+		top: auto;
+		left: auto;
+		margin: 0 1em 0 0;
+		content: "\271A";
+		display: inline-block;
+	}*/
+	.com_documentation .add,
+	.subject-meta .delete,
+	.subject-meta .edit {
+		display: inline-block;
+		line-height: 1;
+		margin: 0;
+		padding: 0.4em 0.5em 0.5em 0.6em;
+		vertical-align: bottom;
+		white-space: nowrap;
+		border: 1px solid rgba(0, 0, 0, 0.2);
+		border-radius: 0.25em;
+		color: #eee;
+		color: rgba(0, 0, 0, 0.4);
+	}
+	.subject-meta .add,
+	.subject-meta .delete,
+	.subject-meta .edit {
+		font-size: 1.2em;
+		overflow: hidden;
+		width: 2em;
+		height: 1.9em;
+	}
+	.subject-meta .add:before,
+	.subject-meta .delete:before,
+	.subject-meta .edit:before {
+		margin-right: 1em;
+	}
+	.subject-meta .edit {
+		border-color: #e7f2ff;
+		background-color: #e7f2ff;
+		color: #5da6fb;
+	}
+	.subject-meta .edit:hover {
+		border-color: #5da6fb;
+		background-color: #5da6fb;
+		color: #fff;
+	}
+	.subject-meta .delete {
+		border-color: #f9e4e4;
+		background-color: #f9e4e4;
+		color: #dd5555;
+	}
+	.subject-meta .delete:hover {
+		border-color: #dd5555;
+		background-color: #dd5555;
+		color: #fff;
+	}
+
+	.com_documentation .aside li {
+		position: relative;
+	}
+	.com_documentation .aside li a.add {
+		position: absolute;
+		right: -2em;
+		top: 0.85em;
+		font-size: 0.8em;
+	}
+	.com_documentation .add {
+		border-color: #e5f4ef;
+		background-color: #e5f4ef;
+		color: #01945d;
+	}
+	.com_documentation .add:hover {
+		border-color: #01945d;
+		background-color: #01945d;
+		color: #fff;
+	}
+
+
+	.activity-processor {
+		display: none;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: rgba(255, 255, 255, 0.8);
+	}
+	.processing .activity-processor {
+		display: block;
+	}
+	.activity-processor .spinner {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		padding: 0;
+		margin-top: -1.5em;
+		margin-left: -1.5em;
+	}
+	.activity-processor .spinner div {
+		cursor: pointer;
+		z-index: 8060;
+		font-size: 10px;
+		position: relative;
+		text-indent: -9999em;
+		border-top: 4px solid rgba(0, 0, 0, 0.2);
+		border-right: 4px solid rgba(0, 0, 0, 0.2);
+		border-bottom: 4px solid rgba(0, 0, 0, 0.2);
+		border-left: 4px solid #666;
+		-webkit-transform: translateZ(0);
+		-moz-transform: translateZ(0);
+		-ms-transform: translateZ(0);
+		transform: translateZ(0);
+		-webkit-animation: fbload 1.1s infinite linear;
+		-moz-animation: fbload 1.1s infinite linear;
+		-ms-animation: fbload 1.1s infinite linear;
+		animation: fbload 1.1s infinite linear;
+	}
+	.activity-processor .spinner div,
+	.activity-processor .spinner div:after {
+		border-radius: 50%;
+		width: 3em;
+		height: 3em;
+	}
+	@-webkit-keyframes fbload {
+		0% {
+			-webkit-transform: rotate(0deg);
+			-moz-transform: rotate(0deg);
+			-ms-transform: rotate(0deg);
+			transform: rotate(0deg);
+		}
+		100% {
+			-webkit-transform: rotate(360deg);
+			-moz-transform: rotate(360deg);
+			-ms-transform: rotate(360deg);
+			transform: rotate(360deg);
+		}
+	}
+	@-ms-keyframes fbload {
+		0% {
+			-webkit-transform: rotate(0deg);
+			-moz-transform: rotate(0deg);
+			-ms-transform: rotate(0deg);
+			transform: rotate(0deg);
+		}
+		100% {
+			-webkit-transform: rotate(360deg);
+			-moz-transform: rotate(360deg);
+			-ms-transform: rotate(360deg);
+			transform: rotate(360deg);
+		}
+	}
+	@keyframes fbload {
+		0% {
+			-webkit-transform: rotate(0deg);
+			-moz-transform: rotate(0deg);
+			-ms-transform: rotate(0deg);
+			transform: rotate(0deg);
+		}
+		100% {
+			-webkit-transform: rotate(360deg);
+			-moz-transform: rotate(360deg);
+			-ms-transform: rotate(360deg);
+			transform: rotate(360deg);
+		}
+	}
+
+	#download-options {
+		display: none;
+	}
+	#download-options h3 {
+		line-height: 1;
+		font-size: 1.1em;
+		font-weight: 400;
+		letter-spacing: .1em;
+		text-transform: uppercase;
+		margin: 0;
+		padding: 1em 1.618em;
+		color: #fff;
+		background-color: #333;
+		-webkit-box-shadow: 0 2px 0 rgba(0,0,0,0.06);
+		   -moz-box-shadow: 0 2px 0 rgba(0,0,0,0.06);
+		    -ms-box-shadow: 0 2px 0 rgba(0,0,0,0.06);
+		     -o-box-shadow: 0 2px 0 rgba(0,0,0,0.06);
+		        box-shadow: 0 2px 0 rgba(0,0,0,0.06);
+	}
+	#download-options p {
+		text-align: center;
+	}
+
+/* Responsive */
+@media (min-width: 40em) {
+	#toc.js li {
+		display: block;
+	}
+	#toc.js .option-select {
+		display: none;
+	}
+}
+@media (min-width: 50em) {
+	.subject .subject-options {
+		float: right;
+		margin: -2.5em 0 0 0;
+		padding: 0;
+	}
+}
+@media (min-width: 70em) {
+}
+@media (min-width: 80em) {
+}
